--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -94,6 +94,9 @@
     &__list-item:first-child {
       padding-left: 285px;
     }
+    &--index {
+      margin-top: 200px;
+    }
     &--portfolio {
       margin-top: 160px;
     }
