--- a/css/main.css
+++ b/css/main.css
@@ -465,27 +465,25 @@ input:-webkit-autofill:active {
     height: 680px;
   }
   .welcome__headline-big {
-    font-size: 235px;
+    top: 18px;
+    font-size: 250px;
     font-weight: 700;
-    letter-spacing: -15px;
+    letter-spacing: -5px;
     z-index: 2;
   }
   .welcome__headline-small {
-    padding-top: 175px;
-    padding-left: 190px;
+    padding-top: 178px;
+    padding-left: 189px;
     width: 646px;
-    font-size: 70px;
-    letter-spacing: -5px;
+    font-size: 72px;
+    letter-spacing: -2px;
   }
   .welcome__text {
     width: 440px;
     margin-left: 190px;
   }
-  .welcome__text-item {
-    font-size: 17px;
-  }
   .welcome__text-item:not(:first-child) {
-    margin-top: 25px;
+    margin-top: 24px;
   }
   .welcome__image {
     display: block;
@@ -555,7 +553,7 @@ input:-webkit-autofill:active {
 }
 @media screen and (min-width: 1440px) {
   .ideas {
-    margin-top: 193px;
+    margin-top: 192px;
     width: 1110px;
   }
   .ideas__background {
@@ -690,7 +688,7 @@ input:-webkit-autofill:active {
     width: 1110px;
   }
   .projects__list {
-    margin-top: 64px;
+    margin-top: 65px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1781,6 +1779,9 @@ input:-webkit-autofill:active {
   }
   .footer__list-item:first-child {
     padding-left: 285px;
+  }
+  .footer--index {
+    margin-top: 200px;
   }
   .footer--portfolio {
     margin-top: 160px;
