--- a/sass/layout/_welcome.scss
+++ b/sass/layout/_welcome.scss
@@ -73,26 +73,27 @@
     width: 1110px;
     height: 680px;
     &__headline-big {
-      font-size: 235px;
+      top: 18px;
+      font-size: 250px;
       font-weight: 700;
-      letter-spacing: -15px;
+      letter-spacing: -5px;
       z-index: 2;
     }
     &__headline-small {
-      padding-top: 175px;
-      padding-left: 190px;
+      padding-top: 178px;
+      padding-left: 189px;
       width: 646px;
-      font-size: 70px;
-      letter-spacing: -5px;
+      font-size: 72px;
+      letter-spacing: -2px;
     }
     &__text {
       width: 440px;
       margin-left: 190px;
     }
     &__text-item {
-      font-size: 17px;
+      // font-size: 17px;
       &:not(:first-child) {
-        margin-top: 25px;
+        margin-top: 24px;
       }
     }
     &__image {
